; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/combotst/extr_combotst.c_CreateCheckButton.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/combotst/extr_combotst.c_CreateCheckButton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"BUTTON\00", align 1
@WS_CHILD = common dso_local global i32 0, align 4
@WS_VISIBLE = common dso_local global i32 0, align 4
@BS_AUTOCHECKBOX = common dso_local global i32 0, align 4
@xButPos = common dso_local global i32 0, align 4
@yButPos = common dso_local global i32 0, align 4
@g_hwnd = common dso_local global i32 0, align 4
@g_hInst = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CreateCheckButton(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @WS_CHILD, align 4
  %10 = load i32, i32* @WS_VISIBLE, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @BS_AUTOCHECKBOX, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @xButPos, align 4
  %15 = load i32, i32* @yButPos, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @g_hwnd, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @UlongToHandle(i32 %18)
  %20 = load i32, i32* @g_hInst, align 4
  %21 = call i32 @CreateWindowEx(i32 0, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %8, i32 %13, i32 %14, i32 %15, i32 %16, i32 20, i32 %17, i32 %19, i32 %20, i32* null)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* @yButPos, align 4
  %23 = add nsw i32 %22, 21
  store i32 %23, i32* @yButPos, align 4
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @CreateWindowEx(i32, i8*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @UlongToHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
